# gpu-setfan

./: Cargo.toml  LICENSE
src/: fan_controller.rs  fanspeed.rs  interface.rs  logging.rs  main.rs  nvidia.rs  pi_controller.rs  temperature.rs
