[package]
name = "gpu-setfan"
authors = ["Marvin Lücke"]
description = "GPU fan control via temperature setpoint"
license = "MIT"
edition = "2024"
rust-version = "1.95.0"
version = "0.1.0"

[dependencies]
anyhow = "1.0.102"
nvml-wrapper = "0.12.1"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
